Bug 179786 - Unable to open spell check dialog in text box
Summary: Unable to open spell check dialog in text box
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kspell (other bugs)
Version First Reported In: 4.1
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Zack Rusin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-06 09:31 UTC by Andrey Borzenkov
Modified: 2009-06-06 19:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey Borzenkov 2009-01-06 09:31:25 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

Assuming I have automatic spell check enabled and start typing in a text box (e.g. web form input) in language different from current default. Most likely typed words are underlined as error. If I now right click to invoke spell check dialogue, the last word (adjacent to cursor) is automatically selected and instead I get dialogue that suggests replacement! And if all words are "errored" (which is likely considering language is wrong), I get this dialogue clicking everywhere. This looks as if there is no way to change language.

To actually invoke spell check dialogue to set language I need to type extra space so cursor is no more adjacent to "bad" word - only in this case does spell check dialogue pop up. This is rather non intuitive.
Comment 1 Dario Andres 2009-06-02 21:39:18 UTC
Proposed fix: http://reviewboard.kde.org/r/790/
Comment 2 Thomas McGuire 2009-06-06 15:33:00 UTC
Apart from the review request, I think it would be very useful to have a "Language" entry in the context menu directly, since switching the language with the dialog is rather cumbersome.
Comment 3 Andrey Borzenkov 2009-06-06 19:05:31 UTC
(In reply to comment #2)
I second that. In 3.5 KMail offered direct language selection which was *very* useful.
Comment 4 Dario Andres 2009-06-06 19:06:51 UTC
There should be another bug report for that issue as I'm going to close this one when I commit the patch.
Comment 5 Andrey Borzenkov 2009-06-06 19:14:47 UTC
(In reply to comment #4)
> There should be another bug report for that issue as I'm going to close this
> one when I commit the patch.

https://bugs.kde.org/show_bug.cgi?id=195484

BTW why is this bug unconfirmed if you are going to commit a fix?
Comment 6 Thomas McGuire 2009-06-06 19:37:13 UTC
> BTW why is this bug unconfirmed if you are going to commit a fix?

There, I confirmed it, hope you have a warm and fuzzy feeling now :P
Comment 7 Dario Andres 2009-06-06 19:53:11 UTC
SVN commit 978291 by darioandres:

Check if the mouse cursor is inside the word itself.
More information: http://reviewboard.kde.org/r/790/

BUG: 179786


 M  +9 -1      ktextedit.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=978291