Check if the mouse cursor is inside the word itself. More information: http://reviewboard.kde.org/r/790/

BUG: 179786

svn path=/trunk/KDE/kdelibs/; revision=978291